Fix icon alignment in content cards

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/content-card.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/content-card.scss
@@ -52,6 +52,8 @@
 
             .content-card-icons {
                 flex: none;
+                display: flex;
+                flex-flow: row nowrap;
 
                 .action-icon-container {
                     margin-left: 1em;
